syntax = "proto3";
package cluster;

message Empty {}

message NodeInfo {
  string id = 1;
  string address = 2; // "host:port"
}

message JoinRequest {
  NodeInfo me = 1;
}

message JoinResponse {
  repeated NodeInfo peers = 1;
}

message PingRequest {
  string from = 1;
}
message PingReply {
  string ack = 1;
}

message BroadcastRequest {
  string from = 1;
  string message = 2;
}
message BroadcastReply {
  uint32 delivered = 1;
}

service Cluster {
  rpc Join(JoinRequest) returns (JoinResponse);
  rpc Ping(PingRequest) returns (PingReply);
  rpc Broadcast(BroadcastRequest) returns (BroadcastReply);
}
